Adding geotrellis server portion, with very basic communication between the client and server

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 *~
+project/boot
+project/plugins/project
+project/plugins/target
+project/target
+target
+.ensime
+TAGS
+\#*#
+*~
+.#*
+.lib
+*.aux.xml
