Changed score algoright; other changes.

--- a/geotrellis/src/main/resources/application.conf
+++ b/geotrellis/src/main/resources/application.conf
@@ -1,4 +1,6 @@
-geotrellis.port = 8888
+geotrellis.port = 8080
 geotrellis.rest-package = "chatta"
 
 geotrellis.server.serve-static = "no"
+
+geotrellis.catalog = "data/catalog.json"
