--- a/geotrellis/src/main/resources/application.conf
+++ b/geotrellis/src/main/resources/application.conf
@@ -1,6 +1,7 @@
 geotrellis.port = 8080
 geotrellis.rest-package = "chatta"
 
-geotrellis.server.serve-static = "no"
+geotrellis.server.serve-static = "yes"
+geotrellis.server.static-path = "../static"
 
 geotrellis.catalog = "data/catalog.json"
