Updates for adding cluster support.

--- a/geotrellis/src/main/resources/application.conf
+++ b/geotrellis/src/main/resources/application.conf
@@ -5,3 +5,30 @@ geotrellis.server.serve-static = "yes"
 geotrellis.server.static-path = "../static"
 
 geotrellis.catalog = "data/catalog.json"
+
+
+akka {
+  actor {
+    provider = "akka.cluster.ClusterActorRefProvider"
+  }
+  remote {
+    log-sent-messages = on
+    transport = "akka.remote.netty.NettyRemoteTransport"
+    netty {
+      hostname = "172.29.9.17"
+      port = 2551
+      message-frame-size = 134217728
+    }
+
+    remote.server.message-frame-size = 134217728
+    remote.client.message-frame-size = 134217728
+
+    cluster {
+      seed-nodes = ["akka://civitas@172.29.9.17:2551"]
+      metrics.enabled = off
+      auto-join = on
+      enabled = true
+      auto-down = on
+    }
+  }
+}
