Updates towards clustering.

--- a/geotrellis/src/main/resources/application.conf
+++ b/geotrellis/src/main/resources/application.conf
@@ -32,3 +32,18 @@ akka {
     }
   }
 }
+
+akka.actor.deployment {
+  /clusterRouter = {
+  router = round-robin
+
+  metrics-selector = mix
+  nr-of-instances = 1000
+  max-nr-of-instances-per-node = 3
+  cluster {
+    enabled = on
+    routees-path = "/user/civitas"
+    allow-local-routees = on
+  }
+  }
+}
