Updates for clustering.

--- a/geotrellis/src/main/resources/application.conf
+++ b/geotrellis/src/main/resources/application.conf
@@ -1,4 +1,4 @@
-geotrellis.port = 8080
+geotrellis.port = 80
 geotrellis.rest-package = "chatta"
 
 geotrellis.server.serve-static = "yes"
@@ -15,22 +15,22 @@ akka {
     log-sent-messages = on
     transport = "akka.remote.netty.NettyRemoteTransport"
     netty {
-      hostname = "172.29.9.17"
+      hostname = ${LOCAL_IP}
       port = 2551
       message-frame-size = 134217728
     }
 
     remote.server.message-frame-size = 134217728
-    remote.client.message-frame-size = 134217728
-
+   remote.client.message-frame-size = 134217728
+   }
     cluster {
-      seed-nodes = ["akka://civitas@172.29.9.17:2551"]
+      seed-nodes = ["akka://GeoTrellis@10.226.218.162:2551"]
       metrics.enabled = off
       auto-join = on
       enabled = true
       auto-down = on
     }
-  }
+  
 }
 
 akka.actor.deployment {
