Further clustering work and debugging.

--- a/geotrellis/src/main/resources/application.conf
+++ b/geotrellis/src/main/resources/application.conf
@@ -1,4 +1,4 @@
-geotrellis.port = 80
+geotrellis.port = 8080
 geotrellis.rest-package = "chatta"
 
 geotrellis.server.serve-static = "yes"
@@ -6,6 +6,12 @@ geotrellis.server.static-path = "../static"
 
 geotrellis.catalog = "data/catalog.json"
 
+geotrellis.hostname = "localhost"
+geotrellis.akka_port = 2551
+geotrellis.cluster_seed   = "localhost"
+geotrellis.cluster_seed = ${?GEOTRELLIS_CLUSTER_SEED_IP}
+geotrellis.cluster_seed_port = "2551"
+geotrellis.cluster_seed_port = ${?GEOTRELLIS_CLUSTER_SEED_PORT}
 
 akka {
   actor {
@@ -15,8 +21,9 @@ akka {
     log-sent-messages = on
     transport = "akka.remote.netty.NettyRemoteTransport"
     netty {
-      hostname = ${LOCAL_IP}
-      port = 2551
+      hostname = "localhost"
+      hostname = ${?geotrellis.hostname}
+      port = ${geotrellis.akka_port}
       message-frame-size = 134217728
     }
 
@@ -24,7 +31,9 @@ akka {
    remote.client.message-frame-size = 134217728
    }
     cluster {
-      seed-nodes = ["akka://GeoTrellis@10.226.218.162:2551"]
+      seed_ip = "localhost"
+      seed_port = "2551"
+      seed-nodes = ["akka://GeoTrellis@"${geotrellis.cluster_seed}":"${geotrellis.cluster_seed_port}]
       metrics.enabled = off
       auto-join = on
       enabled = true
