--- a/geotrellis/src/main/resources/application.conf
+++ b/geotrellis/src/main/resources/application.conf
@@ -2,3 +2,7 @@ geotrellis.port = 8777
 geotrellis.server.static-path = "../static"
 geotrellis.catalog = "data/catalog.json"
 geotrellis.hostname = "localhost"
+zookeeper.address = "localhost"
+accumulo.instance = "GIS"
+accumulo.user = "root"
+accumulo.password = "secret"
