compilation fix; +working tms; TODO: refactor and fuctionality correction

--- a/geotrellis/src/main/resources/application.conf
+++ b/geotrellis/src/main/resources/application.conf
@@ -3,6 +3,6 @@ geotrellis.server.static-path = "../static"
 geotrellis.catalog = "data/catalog.json"
 geotrellis.hostname = "localhost"
 zookeeper.address = "localhost"
-accumulo.instance = "GIS"
+accumulo.instance = "gis"
 accumulo.user = "root"
 accumulo.password = "secret"
