+settings to run on a spark cluster

--- a/geotrellis/src/main/resources/application.conf
+++ b/geotrellis/src/main/resources/application.conf
@@ -6,3 +6,4 @@ zookeeper.address = "localhost"
 accumulo.instance = "gis"
 accumulo.user = "root"
 accumulo.password = "secret"
+spark.master = "local[*]"
