--- a/geotrellis/src/main/resources/application.conf
+++ b/geotrellis/src/main/resources/application.conf
@@ -1,9 +1,21 @@
-geotrellis.port = 8777
-geotrellis.server.static-path = "../static"
-geotrellis.catalog = "data/catalog.json"
-geotrellis.hostname = "localhost"
+geotrellis {
+  port = 8777
+  server.static-path = "../static"
+  catalog  = "data/catalog.json"
+  hostname = "localhost"
+}
+accumulo {
+  instance = "gis"
+  user     = "root"
+  password = "secret"
+}
+cassandra {
+  hosts               = ["localhost"]
+  user                = ""
+  password            = ""
+  keyspace            = "geotrellis"
+  replicationStrategy = "SimpleStrategy"
+  replicationFactor   = 1
+}
 zookeeper.address = "localhost"
-accumulo.instance = "gis"
-accumulo.user = "root"
-accumulo.password = "secret"
-spark.master = "local[*]"
+spark.master      = "local[*]"
