+server support of all backends

--- a/geotrellis/src/main/resources/application.conf
+++ b/geotrellis/src/main/resources/application.conf
@@ -3,12 +3,16 @@ geotrellis {
   server.static-path = "../static"
   catalog  = "data/catalog.json"
   hostname = "localhost"
+  backend  = "cassandra"
 }
+
 accumulo {
-  instance = "gis"
-  user     = "root"
-  password = "secret"
+  instance   = "gis"
+  user       = "root"
+  password   = "secret"
+  zookeepers = "localhost"
 }
+
 cassandra {
   hosts               = ["localhost"]
   user                = ""
@@ -17,5 +21,12 @@ cassandra {
   replicationStrategy = "SimpleStrategy"
   replicationFactor   = 1
 }
-zookeeper.address = "localhost"
-spark.master      = "local[*]"
+
+s3 {
+  bucket = "geotrellis-test"
+  prefix = "chatta-demo"
+}
+
+hadoop.path  = "/chatta-demo"
+file.path    = "/tmp/chatta-demo"
+spark.master = "local[*]"
