--- a/geotrellis/src/main/resources/application.conf
+++ b/geotrellis/src/main/resources/application.conf
@@ -3,7 +3,7 @@ geotrellis {
   server.static-path = "../static"
   catalog  = "data/catalog.json"
   hostname = "localhost"
-  backend  = "cassandra"
+  backend  = "accumulo"
 }
 
 accumulo {
@@ -17,9 +17,13 @@ cassandra {
   hosts               = ["localhost"]
   user                = ""
   password            = ""
-  keyspace            = "geotrellis"
-  replicationStrategy = "SimpleStrategy"
-  replicationFactor   = 1
+  catalog              = "metadata"
+  keyspace             = "geotrellis"
+  replicationStrategy  = "SimpleStrategy"
+  replicationFactor    = 1
+  localDc              = "datacenter1"
+  usedHostsPerRemoteDc = 0
+  allowRemoteDCsForLocalConsistencyLevel = false
 }
 
 s3 {
