update cassandra support

--- a/geotrellis/src/main/resources/application.conf
+++ b/geotrellis/src/main/resources/application.conf
@@ -14,12 +14,14 @@ accumulo {
 }
 
 cassandra {
-  hosts               = ["localhost"]
-  user                = ""
-  password            = ""
-  keyspace            = "geotrellis"
-  replicationStrategy = "SimpleStrategy"
-  replicationFactor   = 1
+  hosts                = ["localhost"]
+  user                 = ""
+  password             = ""
+  replicationStrategy  = "SimpleStrategy"
+  replicationFactor    = 1
+  localDc              = "datacenter1"
+  usedHostsPerRemoteDc = 0
+  allowRemoteDCsForLocalConsistencyLevel = false
 }
 
 s3 {
