move to master branch; added hbase support

--- a/geotrellis/src/main/resources/application.conf
+++ b/geotrellis/src/main/resources/application.conf
@@ -13,6 +13,11 @@ accumulo {
   zookeepers = "localhost"
 }
 
+hbase {
+  zookeepers = "localhost"
+  master     = "localhost"
+}
+
 cassandra {
   hosts               = ["localhost"]
   user                = ""
