move to collections api, file backend by default

--- a/geotrellis/src/main/resources/application.conf
+++ b/geotrellis/src/main/resources/application.conf
@@ -3,7 +3,7 @@ geotrellis {
   server.static-path = "../static"
   catalog  = "data/catalog.json"
   hostname = "localhost"
-  backend  = "accumulo"
+  backend  = "file"
 }
 
 accumulo {
@@ -36,6 +36,6 @@ s3 {
   prefix = "chatta-demo"
 }
 
-hadoop.path  = "/chatta-demo"
-file.path    = "/tmp/chatta-demo"
+hadoop.path  = "chatta-demo"
+file.path    = "/data/chatta-demo"
 spark.master = "local[*]"
