final code additions

--- a/geotrellis/src/main/resources/application.conf
+++ b/geotrellis/src/main/resources/application.conf
@@ -1,9 +1,10 @@
 geotrellis {
-  port = 8777
+  port               = 8777
   server.static-path = "../static"
-  catalog  = "data/catalog.json"
-  hostname = "localhost"
-  backend  = "file"
+  catalog            = "data/catalog.json"
+  hostname           = "localhost"
+  backend            = "file"
+  with-timings       = false # turn it on to profile api calls
 }
 
 accumulo {
@@ -19,9 +20,9 @@ hbase {
 }
 
 cassandra {
-  hosts               = ["localhost"]
-  user                = ""
-  password            = ""
+  hosts                = ["localhost"]
+  user                 = ""
+  password             = ""
   catalog              = "metadata"
   keyspace             = "geotrellis"
   replicationStrategy  = "SimpleStrategy"
