--- a/service/geotrellis/src/main/resources/application.conf
+++ b/service/geotrellis/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 geotrellis {
   port               = 8777
-  server.static-path = "../static"
-  hostname           = "localhost"
+  server.static-path = "/static"
+  hostname           = "0.0.0.0"
   backend            = "file"
   with-timings       = false # turn it on to profile api calls
 }
