basic WMS support

--- a/service/geotrellis/src/main/resources/application.conf
+++ b/service/geotrellis/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 geotrellis {
   port               = 8777
-  server.static-path = "/static"
+  server.static-path = "/Users/daunnc/subversions/git/github/geotrellis-chatta-demo/service/static"
   hostname           = "0.0.0.0"
   backend            = "file"
   with-timings       = false # turn it on to profile api calls
